Sorted conversations list by last message sent date.